--- a/popup/menu.css
+++ b/popup/menu.css
@@ -1,6 +1,7 @@
 html,
 body {
-  width: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 200px;
 }
 
 .hidden {
@@ -14,6 +15,10 @@ body {
   font-size: 1.5em;
   cursor: pointer;
 }
+.button:hover {
+  background-color: purple;
+  color: white;
+}
 
 .reset {
   background-color: #fbfbc9;
@@ -22,3 +27,5 @@ body {
 .reset:hover {
   background-color: #eaea9d;
 }
+
+/* add little animation and marker for when something is selected */
