--- a/popup/menu.css
+++ b/popup/menu.css
@@ -1,31 +1,83 @@
 html,
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  width: 200px;
+  width: 340px;
+  background-color: #2a2a2a;
 }
 
-.hidden {
-  display: none;
-}
-
-.button {
-  margin: 3% auto;
-  padding: 4px;
+.header {
+  font-family: Arial, sans-serif;
+  font-size: 21px;
+  font-weight: bolder;
+  color: #fff;
   text-align: center;
-  font-size: 1.5em;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.switch {
+  float: right;
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
   cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ff5c5c;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
-.button:hover {
-  background-color: purple;
-  color: white;
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 14px;
+  width: 14px;
+  left: 5px;
+  bottom: 3px;
+  background-color: #fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+input:checked + .slider {
+  background-color: #4cac74;
+}
+input:focus + .slider {
+  box-shadow: 0 0 1px #4cac74;
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(18px);
+  -ms-transform: translateX(18px);
+  transform: translateX(18px);
+}
+.slider.round {
+  border-radius: 40px;
 }
 
-.reset {
-  background-color: #fbfbc9;
+.slider.round:before {
+  border-radius: 50%;
+}
+.p2 {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  text-align: left;
+  padding-top: 5px;
+  padding-right: 30px;
+  padding-bottom: 5px;
+  padding-left: 30px;
 }
 
-.reset:hover {
-  background-color: #eaea9d;
+.github {
+  filter: invert(100%);
 }
-
-/* add little animation and marker for when something is selected */
